# Flowcoach2

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  AUDIT.md  BMAD_MIGRATION_PLAN.md  DEVELOPMENT_TASKS.md  ECOSYSTEM_SUMMARY.md  GTD_PROTECTION_SUMMARY.md  IMPROVEMENTS.md  MORNING_BRIEF_FIXED.md  MORNING_BRIEF_FIXES.md  Makefile  PROJECT_SUMMARY_FOR_CHATGPT.md  QUICK_START.md  README.md  REFACTORING.md  ROADMAP.md  SETUP_COMPLETE.md  SLACK_DEV_SETUP.md  SOCKET_MODE_SOLUTION.md  SYSTEM_REVIEW.md  app.py  check_network.py  check_phantom_tasks.py  check_setup.py  debug_socket_mode.py  debug_time.py  debug_todoist_p1.py  demo_complete_ecosystem.py  demo_framework.py  demo_project_breakdown.py  dev.sh  find_user_id.py  flowcoach.db  interactive_demo.py  minimal_socket_test.py  morning_brief_workaround.py  package-lock.json  package.json  (+16 more)
.github/workflows/: ci.yml
agents/: gtd_planning_agent.py  gtd_planning_agent.yaml  gtd_review_agent.py  gtd_review_agent.yaml  gtd_task_agent.py  gtd_task_agent.yaml
apps/: __init__.py
apps/server/: __init__.py  health.py
config/: __init__.py  config.py
core/: base_agent.py  bmad_client.py  calendar_agent.py  communication_agent.py  gtd_protection.py  task_agent.py
docs/: architecture.md  env-bootstrap.md  schema.md  sprint1.5.md  sprint1.md
docs/adr/: 0001-todoist-as-prefs-store.md
docs/architecture/: backend-architecture.md  checklist-results-report.md  coding-standards.md  developer-workflow.md  domain-data-architecture.md  error-handling-strategy.md  frontend-architecture.md  high-level-architecture.md  index.md  infrastructure-deployment.md  integration-architecture.md  (+6 more)
framework/: __init__.py  agent_registry.py  base_agent.py  context_manager.py  workflow_engine.py
handlers/: __init__.py  action_handlers.py  event_handlers.py  message_handlers.py
scripts/: authenticate_calendar.py  lint.sh  migrate.py  test-calendar.ts
services/: __init__.py  calendar_service.py  claude_service.py  openai_service.py  todoist_service.py  workflow_persistence_service.py
src/: cli.ts  index.ts
templates/: project_templates.yaml
tests/: test_basic.py  test_bulk_priorities.py  test_calendar.py  test_enhanced_features.py  test_gtd_protection.py  test_morning_brief_apply_plan.py  test_morning_brief_selection.py  test_openai.py  test_parse_task_input.py  test_phase1_hotfix.py  test_preferences_logging.py  test_priority_inversion.py  test_retry_dedupe.py  test_task_creation_chips.py  test_task_extraction.py  test_task_picker_groupings.py  test_todoist.py  test_todoist_client_shim.py
workflows/: project_breakdown.py  weekly_review.py
(+90 files in other folders)
